--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-static-copy": "^3.1.2"
+    "vite": "^5.0.0"
   }
 }
