--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/icons/icon-512.png",
+      "src": "/pwa-cleanarch-githubpages/icons/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
